[gd_scene load_steps=3 format=3 uid="uid://cxmye7w8frrvi"]

[ext_resource type="Script" path="res://test/title_ui.gd" id="1_lrd7c"]
[ext_resource type="PackedScene" uid="uid://b4bkcrnl6gvgl" path="res://test/title_button.tscn" id="1_wmlv6"]

[node name="title_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lrd7c")

[node name="title_button" parent="." instance=ExtResource("1_wmlv6")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -76.0
offset_right = -160.0
offset_bottom = -28.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_top = NodePath("../title_button3")
focus_neighbor_bottom = NodePath("../title_button2")
text = "PLAY"

[node name="title_button2" parent="." instance=ExtResource("1_wmlv6")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 96.0
offset_bottom = 28.0
grow_vertical = 2
focus_neighbor_top = NodePath("../title_button")
focus_neighbor_bottom = NodePath("../title_button3")
text = "Option"

[node name="title_button3" parent="." instance=ExtResource("1_wmlv6")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 36.0
offset_right = -160.0
offset_bottom = 84.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_top = NodePath("../title_button2")
focus_neighbor_bottom = NodePath("../title_button")
text = "qUIT"

[connection signal="pressed" from="title_button" to="." method="_on_title_button_pressed"]
[connection signal="pressed" from="title_button2" to="." method="_on_title_button_2_pressed"]
[connection signal="pressed" from="title_button3" to="." method="_on_title_button_3_pressed"]
